# BatmanInfer

./: CMakeLists.txt  CMakeLists_nova.txt  CMakeLists_zzhe.txt  CMake_files.cmake  README.md  Tensor模块代码设计.xmind  main.cpp
benchmark/benchmark_test/: matmul_op_test.cpp
includes/: bcl.h  bcl_descriptors.hpp  bcl_entry_points.hpp  bcl_operators.hpp  bcl_types.hpp  bcl_utils.hpp  bcl_version.hpp  status_code.hpp
includes/batman_compute/support/: i_clone_able.h
includes/common/: bi_allocator_wrapper.hpp  bi_i_context.hpp  bi_i_operator.hpp  bi_i_queue.hpp  bi_i_tensor_v2.hpp  bi_registers.hpp  bi_tensor_pack.hpp  bi_types.hpp
includes/common/cpu_info/: cpu_info.hpp  cpu_isa_info.hpp  cpu_model.hpp
includes/common/utils/: bi_log.hpp  bi_macros.hpp  bi_object.hpp  bi_utils.hpp  bi_validate.hpp  legacy_support.hpp
includes/cpu/: bi_cpu_context.hpp  bi_cpu_queue.hpp  bi_cpu_tensor.hpp  bi_cpu_types.hpp  bi_i_cpu_kernel.hpp  bi_i_cpu_operator.hpp
includes/cpu/kernels/: BINELayerNormLayerKernel.hpp  BINERMSNormLayerKernel.hpp  BINEReductionOperationKernel.hpp  BINESelectKernel.hpp  bi_cpu_activation_kernel.hpp  bi_cpu_add_kernel.hpp  bi_cpu_cast_kernel.h  bi_cpu_convert_fully_connected_weights_kernel.hpp  bi_cpu_convert_quantized_signedness_kernel.hpp  bi_cpu_copy_kernel.hpp  bi_cpu_dequantize_kernel.hpp  bi_cpu_dynamic_gemm_kernel.hpp  bi_cpu_element_wise_kernel.hpp  bi_cpu_gemm_inter_leave_4x4_kernel.hpp  bi_cpu_gemm_lowp_matrix_multiply_kernel.hpp  bi_cpu_gemm_lowp_matrix_reduction_kernel.hpp  bi_cpu_gemm_lowp_offset_contribution_kernel.hpp  bi_cpu_gemm_lowp_offset_contribution_output_stage_kernel.hpp  bi_cpu_gemm_lowp_quantize_down_int32_scale_kernel.hpp  bi_cpu_gemm_matrix_addition_kernel.hpp  bi_cpu_mul_kernel.hpp  (+12 more)
includes/data/: Tensor.hpp  bi_tensor_shape.hpp  marco.hpp  tensor.hpp  tensor_description.hpp  tensor_util.hpp
includes/function_info/: bi_GEMMInfo.h  bi_MatMulInfo.h  bi_activationLayerInfo.h  bi_convolutionInfo.h  bi_fullyConnectedLayerInfo.h  bi_scatterInfo.h
includes/graph/: bi_dataLayerVisitor.h  bi_edge.h  bi_graph.h  bi_graphBuilder.h  bi_graphContext.h  bi_graphManager.h  bi_graph_all_include.h  bi_ideviceBackend.h  bi_igraphMutator.h  bi_igraphPrinter.h  bi_inode.h  bi_inodeVisitor.h  bi_itensorAccessor.h  bi_itensorHandle.h  bi_layerDescriptors.h  bi_logger.h  bi_passManager.h  bi_tensor.h  bi_tensorDescriptor.h  bi_typePrinter.h  bi_types.h  bi_utils.h  bi_workload.h
includes/half/: half.hpp
includes/kv_cache_manager/: bi_kv_cache_manager.hpp  bi_kv_cahe_i_manager.hpp  memory_tree.hpp  physical_block_manager.hpp
includes/model_interface/: gpt2_model.h
includes/neon/: neon_defines.h
includes/onnx_conv/: OnnxUtils.hpp
includes/operators/: batman_operator.hpp
includes/others/: utils.hpp
includes/runtime/: bi_allocator.hpp  bi_blob_lifetime_manager.hpp  bi_blob_memory_pool.hpp  bi_i_allocator.hpp  bi_i_function.hpp  bi_i_lifetime_manager.hpp  bi_i_memory.hpp  bi_i_memory_group.hpp  bi_i_memory_manager.hpp  bi_i_memory_pool.hpp  bi_i_memory_region.hpp  bi_i_operator.hpp  bi_i_runtime_context.hpp  bi_i_scheduler.hpp  bi_i_simple_lifetime_manager.hpp  bi_i_tensor_allocate.hpp  bi_i_tensor_allocator.h  bi_i_tensor_allocator.hpp  bi_i_transformer_weights.hpp  bi_i_weights_manager.hpp  bi_memory.hpp  bi_memory_group.hpp  bi_memory_manager_on_demand.hpp  bi_memory_region.hpp  bi_offset_lifetime_manager.h  bi_offset_memory_pool.h  bi_pool_manager.hpp  bi_scheduler.hpp  bi_scheduler_utils.hpp  bi_single_thread_scheduler.hpp  bi_tensor.hpp  bi_tensor_allocator.hpp  bi_types.hpp  i_pool_manager.hpp  ir.h  runtime_datatype.hpp  runtime_ir.hpp  runtime_op.hpp  runtime_operand.hpp  runtime_parameter.hpp  (+1 more)
includes/sdk/: bi_sdk_api.h
includes/support/: b_float16.hpp  bi_acl_requires.h  bi_cast.hpp  bi_half.hpp  bi_icloneable.h  bi_iterable.h  bi_rounding.hpp  bi_saturate_cast.hpp  bi_toolchain_support.hpp  i_clone_able.h  mutex.hpp  semaphore.hpp  string_support.hpp
includes/utils/: bi_graph_utils.h  bi_type_printer.hpp  utils.hpp
model_files/: attention_c_attn_bias.npy  maxpool2d_model.onnx
model_files/operators/: elementwise_mul.onnx  equal_model.onnx  expands_model.onnx  transpose.onnx  trilu_operator.onnx
source/: Tensor.cpp  bcl_version.cpp  ir.cpp  runtime_ir.cpp  runtime_op.cpp  tensor_util.cpp
source/c/: bcl_context.cpp  bcl_operators.cpp  bcl_queue.cpp  bcl_tensor.cpp  bcl_tensor_pack.cpp  bcl_version.cpp
source/common/: bi_allocator_wrapper.cpp  bi_i_operator.cpp  bi_i_tensor_v2.cpp  bi_tensor_pack.cpp  cpu_info.cpp  cpu_isa_info.cpp  cpu_model.cpp
source/cpu/: bi_cpu_context.cpp  bi_cpu_queue.cpp  bi_cpu_tensor.cpp
source/graph/: bi_graph.cpp  bi_graphBuilder.cpp  bi_graphManager.cpp  bi_inode.cpp  bi_passManager.cpp  bi_tensor.cpp  bi_utils.cpp
source/kv_cache_manager/: bi_kv_cache_manager.cpp  memory_tree.cpp
source/model_interface/: gpt2_model.cpp
source/onnx_conv/: OnnxUtils.cpp
source/operators/: batman_operator.cpp
source/others/: utils.cpp
source/runtime/: bi_allocator.cpp  bi_blob_lifetime_manager.cpp  bi_blob_memory_pool.cpp  bi_i_scheduler.cpp  bi_i_siample_lifetime_manager.cpp  bi_i_tensor_allocator.cpp  bi_i_weights_manager.cpp  bi_memory.cpp  bi_memory_manager_on_demand.cpp  bi_offset_lifetime_manager.cpp  bi_offset_memory_pool.cpp  bi_pool_manager.cpp  bi_scheduler.cpp  bi_scheduler_utils.cpp  bi_tensor.cpp  bi_tensor_allocator.cpp  utils.cpp
source/sdk/: bi_sdk_api.cpp
source/utils/: bi_graph_utils.cpp  utils.cpp
test/: gemm_lowp_outputstage_test.cpp  tensor_get_values.cpp  test_bugs.cpp  test_convolution.cpp  test_dynamic_gemmlowp.cpp  test_graph_builder.cpp  test_halide_drom.cpp  test_interface_call.cpp  test_interface_kvcaches_call.cpp  test_ir_op.cpp  test_kvcaches.cpp  test_layer_create.cpp  test_layer_norm.cpp  test_layer_operator.cpp  test_matmul_assem.cpp  test_maxpooling.cpp  test_mem_alloc.cpp  test_neon_operator.cpp  test_onnx.cpp  test_open_blas.cpp  test_operators.cpp  test_pack_res.cpp  test_perf_model.cpp  test_quantize.cpp  test_resnt.cpp  test_sigmoid.cpp  test_topo.cpp
(+921 files in other folders)
